Start shared and tested grpc service, added folder for protos